# LangChainHCCourse3

./: README.md  pyproject.toml
course_3/: Conversational_Agent.ipynb  LCEL.ipynb  Langchain_OpenAI_Function_Calling.ipynb  OpenAI_Function_Calling.ipynb  Tagging_&_Extraction.ipynb  Tools_&_Routing.ipynb  bot.py
